--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,3 +8,8 @@ add_executable(A2 aufgabe2.c)
 add_executable(A3 aufgabe3.c)
 add_executable(A4 aufgabe4.c)
 add_executable(A5 aufgabe5.c)
+add_executable(A6 aufgabe6.c)
+add_executable(A7 aufgabe7.c)
+add_executable(A8 aufgabe8.c)
+add_executable(A9 aufgabe9.c)
+add_executable(A10 aufgabe10.c)
